# ProtoVM

./: .gitignore  4004_demo_readme.md  APIDocs.md  AnalogComponentTests.mk  AnalogTest.mk  AnalogTests.mk  BRANCH_COMPATIBILITY_TEST.md  BUILD.sh  CADC_Documentation.md  CMakeLists.txt  CMakeListsCLI.txt  COMPLETION_SUMMARY.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MDS1101_SchematicTools.md  PROJECT_COMPLETION_SUMMARY.md  QWEN.md  README.md  REFERENCE_CADC.txt  TASKS.md  TASKS_CADC.md  TASKS_SUMMARY.md  Tutorials.md  build-cli.sh  build.sh  build_analog.sh  build_cli.sh  check_syntax.sh  create_4004_binary  create_4004_binary.cpp  gdb_script.txt  run.sh  run_4004_demo.sh  run_4004_program.sh  run_4004_tests.sh  run_cadc_demo.sh  run_cadc_program.sh  run_cadc_tests.sh  temp_func.txt  (+7 more)
analog_synth/: ADSR.cpp  AnalogSynthADSR.cpp  AnalogSynthADSR.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  ExamplePatches.h  Filter.cpp  Filter.h  LFO.cpp  LFO.h  ModulationMatrix.cpp  ModulationMatrix.h  Oscillator.cpp  Oscillator.h  PortAudioWrapper.cpp  PortAudioWrapper.h  Portamento.cpp  Portamento.h  PresetManager.cpp  PresetManager.h  README.md  Sequencer.cpp  Sequencer.h  SynthArchAdapter.h  SynthArchitectures.cpp  SynthArchitectures.h  Synthesizer.cpp  Synthesizer.h  WavWriter.cpp  WavWriter.h  main.cpp
build_cli/: CMakeCache.txt  Makefile  cmake_install.cmake
build_tests/: CMakeCache.txt  Makefile  cmake_install.cmake
circuitboards/MDS-1101/: machine1
docs/: proto_vm_analog_model_and_emulation_design.md  proto_vm_behavioral_design.md  proto_vm_block_design.md  proto_vm_branching_design.md  proto_vm_cdc_design.md  proto_vm_cli_design.md  proto_vm_codegen_cpp_class_and_audio_dsl_design.md  proto_vm_codegen_hll_design.md  proto_vm_designer_api_design.md  proto_vm_diff_design.md  proto_vm_dsp_graph_and_runtime_design.md  proto_vm_functional_design.md  proto_vm_global_pipelining_design.md  proto_vm_graph_design.md  proto_vm_hls_ir_design.md  proto_vm_instrument_export_cpp_design.md  proto_vm_instrument_graph_design.md  proto_vm_ir_optimization_design.md  proto_vm_pipeline_design.md  proto_vm_playbooks_design.md  proto_vm_plugin_project_export_design.md  proto_vm_plugin_skeleton_export_design.md  proto_vm_refactor_design.md  proto_vm_repo_analysis.md  proto_vm_retiming_apply_design.md  proto_vm_retiming_design.md  proto_vm_retiming_opt_design.md  proto_vm_scheduling_design.md  proto_vm_structural_synthesis_design.md  proto_vm_timing_design.md
docs/cadc/: ap1-26-97_page_1.txt  ap1-26-97_page_10.txt  ap1-26-97_page_11.txt  ap1-26-97_page_12.txt  ap1-26-97_page_13.txt  ap1-26-97_page_14.txt  ap1-26-97_page_15.txt  ap1-26-97_page_16.txt  ap1-26-97_page_17.txt  ap1-26-97_page_18.txt  ap1-26-97_page_19.txt  ap1-26-97_page_2.txt  ap1-26-97_page_20.txt  ap1-26-97_page_21.txt  ap1-26-97_page_22.txt  ap1-26-97_page_23.txt  ap1-26-97_page_24.txt  ap1-26-97_page_25.txt  ap1-26-97_page_26.txt  ap1-26-97_page_3.txt  ap1-26-97_page_4.txt  ap1-26-97_page_5.txt  ap1-26-97_page_6.txt  ap1-26-97_page_7.txt  ap1-26-97_page_8.txt  ap1-26-97_page_9.txt
docs/old/: COMMIT_MESSAGE.txt  COMPLETION_SUMMARY.md  README.IMPROVED.md
schematics/: 6502.psl  uk101.psl
scripts/: create_4004_binary.sh  create_cadc_binary.sh  minimax4004.psl  run_4004_demo.sh  run_4004_program.sh  run_4004_putchar.sh  run_4004_tests.sh  run_cadc_demo.sh  run_cadc_program.sh  run_cadc_tests.sh  simple_nand.psl  test_4004_output.sh  test_cadc_output.sh
src/: TestMixedSignal.cpp
src/AnalogTests/: AnalogAudioTest.cpp  ProtoVMAnalogAudioTest.cpp  ProtoVMAnalogCapacitorTest.cpp  ProtoVMAnalogRCTest.cpp  ProtoVMAnalogResistorTest.cpp  ProtoVMAnalogTestRunner.cpp
src/ProtoVM/: ADSR.cpp  ADSR.h  ALU.cpp  ALU.h  AdditionalSources.cpp  AdditionalSources.h  AddressDecoder4004.cpp  AddressDecoder4004.h  AnalogAudioTest.cpp  AnalogCapacitorTest.cpp  AnalogCommon.cpp  AnalogCommon.h  AnalogComponents.cpp  AnalogComponents.h  AnalogDifferentialEquations.cpp  AnalogDifferentialEquations.h  AnalogRCTest.cpp  AnalogResistorTest.cpp  AnalogSemiconductors.cpp  AnalogSemiconductors.h  AnalogSimulation.cpp  AnalogSimulation.h  AnalogSimulationTest.cpp  Arithmetic.cpp  Arithmetic.h  ArithmeticTests.cpp  AudioOutputSystem.cpp  AudioOutputSystem.h  AudioProcessingModes.cpp  AudioProcessingModes.h  AudioSignalPath.cpp  AudioSignalPath.h  Basic8BitCPU.cpp  Basic8BitCPU.h  Bus.cpp  Bus.h  BusController4004.cpp  BusController4004.h  BusInterface4004.cpp  BusInterface4004.h  (+279 more)
src/ProtoVMCLI/: AnalogBlockExtractor.cpp  AnalogBlockExtractor.h  (+134 more)
task/: TASKS.md.backup  TASKS_CADC.md
tests/: CMakeLists.txt  circuit_facade_plugin_export_integration_test.cpp  command_dispatcher_plugin_export_integration_test.cpp  cpp_class_audio_dsl_test.cpp  diff_engine_test.cpp  plugin_project_export_test.cpp  simple_diff_test.cpp
tests/gui/: CMakeLists.txt  advanced_logic_test.cpp  canvas_component_test.cpp  logic_test.cpp  project_test.cpp  properties_test.cpp  selection_test.cpp  simulation_test.cpp  undo_redo_test.cpp
tests/unit/: advanced_timing_test.cpp  analog_model_test.cpp  behavioral_analysis_test.cpp  block_analysis_test.cpp  cdc_analysis_test.cpp  code_emitter_test.cpp  codegen_ir_test.cpp  codesigner_test.cpp  global_pipelining_test.cpp  hls_ir_integration_test.cpp  hls_ir_test.cpp  ir_optimization_test.cpp  json_io_codegen_test.cpp  nand_gate_test.pst  register_test.pst  retiming_test.cpp  scheduling_test.cpp  timing_analysis_test.cpp
utils/: create_cadc_binary.cpp
wxsrc/: CircuitAnalysis.cpp  CircuitAnalysis.h  CircuitAnalyzer.cpp  CircuitAnalyzer.h  CircuitCanvas.cpp  CircuitCanvas.h  CircuitData.h  CircuitSerializer.cpp  CircuitSerializer.h  ComponentLibrary.cpp  ComponentLibrary.h  ComponentPalette.cpp  ComponentPalette.h  MainFrame.cpp  MainFrame.h  PropertiesPanel.cpp  PropertiesPanel.h  ProtoVMApp.cpp  ProtoVMApp.h  SimulationBridge.cpp  SimulationBridge.cpp.bak  SimulationBridge.h  SimulationController.cpp  SimulationController.h  SimulationInterface.h  UndoRedo.cpp  UndoRedo.h  build.sh  main.cpp  roadmap.md  tasks.md
(+1 files in other folders)
